--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
           <ul
             class="hidden md:flex space-x-10 text-gray-600 dark:text-gray-100 font-bold text-sm uppercase"
           >
-            <li class="hover:text-500">
+            <li class="hover:text-gray-500">
               <a href="#home">Inicio</a>
             </li>
-            <li class="hover:text-500">
+            <li class="hover:text-gray-500">
               <a href="#about">Sobre mi</a>
             </li>
-            <li class="hover:text-500">
+            <li class="hover:text-gray-500">
               <a href="#services">Servicios</a>
             </li>
 
-            <li class="hover:text-500">
+            <li class="hover:text-gray-500">
               <a href="#contacts">Contactos</a>
             </li>
           </ul>
@@ -56,19 +56,27 @@
 
           <ul
             id="menu"
-            class="hidden bg-indigo-900 absolute left-0 top-0 w-full p-10 rounded-b-3xl space-y-10 text-white text-center"
+            class="hidden flex flex-col items-center bg-indigo-900 absolute left-0 top-0 w-full p-10 rounded-b-3xl space-y-10 text-white text-center"
           >
-            <li class="hover:text-500">
+            <li class="hover:text-gray-500">
               <a class="hlink" href="#home">Inicio</a>
             </li>
-            <li class="hover:text-500">
+            <li class="hover:text-gray-500">
               <a class="hlink" href="#about">Sobre mi</a>
             </li>
-            <li class="hover:text-500">
+            <li class="hover:text-gray-500">
               <a class="hlink" href="#services">Servicios</a>
             </li>
-            <li class="hover:text-500">
+            <li class="hover:text-gray-500">
               <a class="hlink" href="#contacts">Contactos</a>
+            </li>
+            <li class="hover:text-gray-500">
+              <a href=""
+                ><img
+                  src="./img/moon.png"
+                  class="hidden md:block w-5 cursor-pointer"
+                  alt="Modo oscuro"
+              /></a>
             </li>
           </ul>
         </div>
@@ -231,27 +239,54 @@
         <div class="flex flex-col gap-3 items-center">
           <h2 class="text-indigo-600 font-bold">CONTACTOS</h2>
           <h2 class="text-3xl dark:text-white">¿En que te puedo ayudar?</h2>
+          <p class="w-1/2 text-center text-red-500 dark:text-red-500 text-lg">
+            Me puede escribir directamente al whatsapp
+          </p>
+          <a
+            href="https://api.whatsapp.com/send?phone=31616024573"
+            target="_blank"
+            class="text-white font-semibold text-lg p-2 hover:text-gray-400 bg-indigo-600 hover:ring-1 hover:bg-white dark:hover:bg-slate-900"
+            >CLICK AQUI</a
+          >
+          <p class="w-1/2 text-center text-gray-600 dark:text-gray-300">O</p>
           <p class="w-1/2 text-center text-gray-600 dark:text-gray-300">
-            ¿Tienes alguna pregunta? Llene el formulario y me contactare con
+            ¿Tiene alguna pregunta? Llene el formulario y me contactare con
             usted para resolver sus problemas.
           </p>
         </div>
         <!-- Botton -->
-        <form class="mt-5 p-8 flex flex-col gap-5 items-center">
+        <form
+          action="https://formsubmit.co/s.sagsilver@gmail.com"
+          method="POST"
+          class="mt-5 p-8 flex flex-col gap-5 items-center"
+        >
           <input
+            name="name"
             class="p-2 w-full md:w-1/2 ring-1 ring-indigo-300 rounded-sm dark:bg-slate-800 dark:ring-0 dark:text-white"
             type="text"
+            required
             placeholder="Nombre y apellidos"
           />
           <input
+            name="email"
             class="p-2 w-full md:w-1/2 ring-1 ring-indigo-300 rounded-sm dark:bg-slate-800 dark:ring-0 dark:text-white"
             type="email"
+            required
             placeholder="Correo Electronico"
           />
+          <input
+            name="phone"
+            class="p-2 w-full md:w-1/2 ring-1 ring-indigo-300 rounded-sm dark:bg-slate-800 dark:ring-0 dark:text-white"
+            type="number"
+            required
+            placeholder="Numero de contacto"
+          />
           <textarea
+            name="description"
             class="p-2 w-full md:w-1/2 ring-1 ring-indigo-300 rounded-sm dark:bg-slate-800 dark:ring-0 dark:text-white"
             cols="30"
             rows="10"
+            required
             placeholder="Mensaje"
           ></textarea>
           <button
