--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       class="h-1/2 lg:h-screen bg-gradient-to-t from-indigo-200 dark:from-slate-800 dark:to-slate-900 relative overflow-hidden"
     >
       <!-- Navbar -->
-      <nav class="w-full fixed top-0 bg-white z-10 dark:bg-slate-900">
+      <nav class="w-full fixed top-0 px-2 bg-white z-10 dark:bg-slate-900">
         <div class="container mx-auto py-3 flex items-center justify-between">
           <div class="flex items-center gap-2">
             <img src="./img/logo2.png" alt="Logo" class="w-9 h-9" />
@@ -71,12 +71,12 @@
               <a class="hlink" href="#contacts">Contactos</a>
             </li>
             <li class="hover:text-gray-500">
-              <a href=""
-                ><img
-                  src="./img/moon.png"
-                  class="hidden md:block w-5 cursor-pointer"
-                  alt="Modo oscuro"
-              /></a>
+              <p
+                id="modo-oscuro-movil"
+                class="hlink text-red-500 text-lg font-semibold"
+              >
+                Modo Oscuro
+              </p>
             </li>
           </ul>
         </div>
