--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@
         <!-- Top -->
         <div class="flex flex-col gap-3 items-center">
           <h2 class="text-indigo-600 font-bold">SERVICIOS</h2>
-          <h2 class="text-3xl dark:text-white">¿Que te puedo ofrecer?</h2>
+          <h2 class="text-3xl dark:text-white">¿Que puedo ofrecer?</h2>
           <p class="w-1/2 text-center text-gray-600 dark:text-gray-300">
-            Cambios en tu estilo de vida, evitando riesgos de sufrir
+            Cambios en su estilo de vida, evitando riesgos de sufrir
             enfermedades que perjudican su diario vivir, y hacer de su
             seguimiento medico un momento de afectividad y felicidad.
           </p>
@@ -203,7 +203,7 @@
             </h2>
             <p class="text-gray-600 dark:text-gray-300">
               Hipotiroidismo, Hipertiroidismo, Nodulos tiroideos, Bocio
-              tiroideo. Quiere que seas tu Endocrinólogo de confianza.
+              tiroideo. Quiere que sea su Endocrinólogo de confianza.
             </p>
             <a href="" class="text-indigo-600 font-semibold text-sm"
               >Leer Mas</a
@@ -221,8 +221,8 @@
               Programa personalizado para bajar de peso
             </h2>
             <p class="text-gray-600 dark:text-gray-300">
-              Tus patrones de alimentación estarán ordenados. Tendrás
-              establecido el hábito de hacer actividad física y ejercicios.
+              Sus patrones de alimentación estarán ordenados. Tendrá establecido
+              el hábito de hacer actividad física y ejercicios.
             </p>
             <a href="" class="text-indigo-600 font-semibold text-sm"
               >Leer Mas</a
