--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       class="h-1/2 lg:h-screen bg-gradient-to-t from-indigo-200 dark:from-slate-800 dark:to-slate-900 relative overflow-hidden"
     >
       <!-- Navbar -->
-      <nav class="w-full fixed top-0 px-2 bg-white z-10 dark:bg-slate-900">
+      <nav class="w-full md:fixed top-0 px-2 bg-white z-10 dark:bg-slate-900">
         <div class="container mx-auto py-3 flex items-center justify-between">
           <div class="flex items-center gap-2">
             <img src="./img/logo2.png" alt="Logo" class="w-9 h-9" />
@@ -37,7 +37,6 @@
             <li class="hover:text-gray-500">
               <a href="#services">Servicios</a>
             </li>
-
             <li class="hover:text-gray-500">
               <a href="#contacts">Contactos</a>
             </li>
@@ -48,37 +47,6 @@
             class="hidden md:block w-5 cursor-pointer"
             alt="Modo oscuro"
           />
-          <div id="hamburger" class="space-y-1 md:hidden cursor-pointer z-20">
-            <div class="w-6 h-1 bg-gray-500"></div>
-            <div class="w-6 h-1 bg-gray-500"></div>
-            <div class="w-6 h-1 bg-gray-500"></div>
-          </div>
-
-          <ul
-            id="menu"
-            class="hidden flex flex-col items-center bg-indigo-900 absolute left-0 top-0 w-full p-10 rounded-b-3xl space-y-10 text-white text-center"
-          >
-            <li class="hover:text-gray-500">
-              <a class="hlink" href="#home">Inicio</a>
-            </li>
-            <li class="hover:text-gray-500">
-              <a class="hlink" href="#about">Sobre mi</a>
-            </li>
-            <li class="hover:text-gray-500">
-              <a class="hlink" href="#services">Servicios</a>
-            </li>
-            <li class="hover:text-gray-500">
-              <a class="hlink" href="#contacts">Contactos</a>
-            </li>
-            <li class="hover:text-gray-500">
-              <p
-                id="modo-oscuro-movil"
-                class="hlink text-red-500 text-lg font-semibold"
-              >
-                Modo Oscuro
-              </p>
-            </li>
-          </ul>
         </div>
       </nav>
       <!-- Intro Content -->
@@ -131,7 +99,7 @@
             alt="dr foto"
           />
           <div class="h-full rounded-full overflow-hidden">
-            <img src="./img/doctor.jpg" alt="DOCTOR FOTO" />
+            <img src="./img/doctor-img.jpg" alt="DOCTOR FOTO" class="w-72" />
           </div>
         </div>
 
@@ -159,10 +127,10 @@
     <div id="services" class="dark:bg-slate-900">
       <div class="container mx-auto">
         <!-- Top -->
-        <div class="flex flex-col gap-3 items-center">
+        <div class="flex flex-col gap-3 items-center max-w-full">
           <h2 class="text-indigo-600 font-bold">SERVICIOS</h2>
           <h2 class="text-3xl dark:text-white">¿Que puedo ofrecer?</h2>
-          <p class="w-1/2 text-center text-gray-600 dark:text-gray-300">
+          <p class="w-4/5 text-center text-gray-600 dark:text-gray-300">
             Cambios en su estilo de vida, evitando riesgos de sufrir
             enfermedades que perjudican su diario vivir, y hacer de su
             seguimiento medico un momento de afectividad y felicidad.
@@ -186,95 +154,12 @@
               Diabetes es cuando el páncreas no produce insulina, debido a que
               usted hace trabajar demasiado su páncreas.
             </p>
-            <a
-              href=""
-              class="text-indigo-600 font-semibold text-sm"
-              data-modal-toggle="defaultModal"
-              >Leer Mas</a
+            <button
+              id="open"
+              class="text-indigo-600 font-semibold text-sm w-fit"
             >
-          </div>
-          <!-- Main modal -->
-          <div
-            id="defaultModal"
-            tabindex="-1"
-            aria-hidden="true"
-            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 w-full md:inset-0 h-modal md:h-full"
-          >
-            <div class="relative p-4 w-full max-w-2xl h-full md:h-auto">
-              <!-- Modal content -->
-              <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-                <!-- Modal header -->
-                <div
-                  class="flex justify-between items-start p-4 rounded-t border-b dark:border-gray-600"
-                >
-                  <h3
-                    class="text-xl font-semibold text-gray-900 dark:text-white"
-                  >
-                    Terms of Service
-                  </h3>
-                  <button
-                    type="button"
-                    class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 ml-auto inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
-                    data-modal-toggle="defaultModal"
-                  >
-                    <svg
-                      aria-hidden="true"
-                      class="w-5 h-5"
-                      fill="currentColor"
-                      viewBox="0 0 20 20"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        fill-rule="evenodd"
-                        d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
-                        clip-rule="evenodd"
-                      ></path>
-                    </svg>
-                    <span class="sr-only">Close modal</span>
-                  </button>
-                </div>
-                <!-- Modal body -->
-                <div class="p-6 space-y-6">
-                  <p
-                    class="text-base leading-relaxed text-gray-500 dark:text-gray-400"
-                  >
-                    With less than a month to go before the European Union
-                    enacts new consumer privacy laws for its citizens, companies
-                    around the world are updating their terms of service
-                    agreements to comply.
-                  </p>
-                  <p
-                    class="text-base leading-relaxed text-gray-500 dark:text-gray-400"
-                  >
-                    The European Union’s General Data Protection Regulation
-                    (G.D.P.R.) goes into effect on May 25 and is meant to ensure
-                    a common set of data rights in the European Union. It
-                    requires organizations to notify users as soon as possible
-                    of high-risk data breaches that could personally affect
-                    them.
-                  </p>
-                </div>
-                <!-- Modal footer -->
-                <div
-                  class="flex items-center p-6 space-x-2 rounded-b border-t border-gray-200 dark:border-gray-600"
-                >
-                  <button
-                    data-modal-toggle="defaultModal"
-                    type="button"
-                    class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
-                  >
-                    I accept
-                  </button>
-                  <button
-                    data-modal-toggle="defaultModal"
-                    type="button"
-                    class="text-gray-500 bg-white hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-blue-300 rounded-lg border border-gray-200 text-sm font-medium px-5 py-2.5 hover:text-gray-900 focus:z-10 dark:bg-gray-700 dark:text-gray-300 dark:border-gray-500 dark:hover:text-white dark:hover:bg-gray-600 dark:focus:ring-gray-600"
-                  >
-                    Decline
-                  </button>
-                </div>
-              </div>
-            </div>
+              Leer Mas
+            </button>
           </div>
           <div
             class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
@@ -291,9 +176,9 @@
               Hipotiroidismo, Hipertiroidismo, Nodulos tiroideos, Bocio
               tiroideo. Quiere que sea su Endocrinólogo de confianza.
             </p>
-            <a href="" class="text-indigo-600 font-semibold text-sm"
-              >Leer Mas</a
-            >
+            <button class="text-indigo-600 font-semibold text-sm w-fit">
+              Leer Mas
+            </button>
           </div>
           <div
             class="w-full md:w-4/12 shadow-xl rounded-lg p-5 my-3 md:my-10 flex flex-col gap-3"
@@ -310,9 +195,9 @@
               Sus patrones de alimentación estarán ordenados. Tendrá establecido
               el hábito de hacer actividad física y ejercicios.
             </p>
-            <a href="" class="text-indigo-600 font-semibold text-sm"
-              >Leer Mas</a
-            >
+            <button class="text-indigo-600 font-semibold text-sm w-fit">
+              Leer Mas
+            </button>
           </div>
         </div>
       </div>
@@ -324,7 +209,7 @@
         <!-- Top -->
         <div class="flex flex-col gap-3 items-center">
           <h2 class="text-indigo-600 font-bold">CONTACTOS</h2>
-          <h2 class="text-3xl dark:text-white">¿En que te puedo ayudar?</h2>
+          <h2 class="text-3xl dark:text-white">¿En que le puedo ayudar?</h2>
           <p class="w-1/2 text-center text-red-500 dark:text-red-500 text-lg">
             Me puede escribir directamente al whatsapp
           </p>
@@ -376,7 +261,7 @@
             placeholder="Mensaje"
           ></textarea>
           <button
-            class="w-1/2 bg-indigo-600 text-white font-medium px-3 py-2 rounded-md cursor-pointer"
+            class="w-1/2 bg-indigo-600 text-white font-medium px-3 py-2 m-5 rounded-md cursor-pointer"
             type="submit"
           >
             Enviar
@@ -384,10 +269,39 @@
         </form>
       </div>
     </div>
+
+    <!-- Overlay element -->
+    <div
+      id="overlay"
+      class="fixed hidden z-40 w-screen h-screen inset-0 bg-gray-900 bg-opacity-60"
+    ></div>
+
+    <!-- The dialog -->
+    <div
+      id="dialog"
+      class="hidden fixed z-50 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-96 bg-white rounded-md px-8 py-6 space-y-5 drop-shadow-lg"
+    >
+      <h1 class="text-2xl font-semibold">Dialog Title</h1>
+      <div class="py-5 border-t border-b border-gray-300">
+        <p>
+          Welcome to KindaCode.com. Hope you will find something useful. Have a
+          nice day and happy coding
+        </p>
+      </div>
+      <div class="flex justify-end">
+        <!-- This button is used to close the dialog -->
+        <button
+          id="close"
+          class="px-5 py-2 mb-2 lg:mb-0 bg-indigo-500 hover:bg-indigo-700 text-white cursor-pointer rounded-md"
+        >
+          Close
+        </button>
+      </div>
+    </div>
     <!-- footer -->
-    <footer class="w-full bg-gray-800">
+    <footer class="w-full bg-gray-800 fixed bottom-0 md:static lg:static">
       <div
-        class="container mx-auto py-5 px-10 flex items-center justify-around"
+        class="container mx-auto py-3 px-2 md:px-10 flex items-center justify-between md:py-4"
       >
         <div class="flex items-center gap-2">
           <img class="w-8" src="./img/logo2.png" alt="" />
@@ -396,7 +310,7 @@
         <span class="hidden md:block font-medium text-white text-center"
           >© 2022 Dr. Arison Acosta. by Santiago Giler.</span
         >
-        <div class="flex gap-2">
+        <div class="flex gap-4">
           <a
             href="https://www.facebook.com/arisondavid.acostaandrade"
             target="_blank"
@@ -405,6 +319,38 @@
               src="./img/facebook.png"
               alt="facebook"
           /></a>
+          <div>
+            <div id="hamburger" class="space-y-1 md:hidden cursor-pointer z-30">
+              <div class="w-6 h-1 bg-white"></div>
+              <div class="w-6 h-1 bg-white"></div>
+              <div class="w-6 h-1 bg-white"></div>
+            </div>
+            <ul
+              id="menu"
+              class="hidden flex flex-col items-center bg-gray-700 absolute left-0 bottom-0 w-full p-10 rounded-t-3xl space-y-10 text-white text-center -z-10"
+            >
+              <li class="hover:text-gray-500">
+                <a class="hlink" href="#home">Inicio</a>
+              </li>
+              <li class="hover:text-gray-500">
+                <a class="hlink" href="#about">Sobre mi</a>
+              </li>
+              <li class="hover:text-gray-500">
+                <a class="hlink" href="#services">Servicios</a>
+              </li>
+              <li class="hover:text-gray-500">
+                <a class="hlink" href="#contacts">Contactos</a>
+              </li>
+              <li class="hover:text-gray-500">
+                <p
+                  id="modo-oscuro-movil"
+                  class="hlink text-red-500 text-lg font-semibold mb-5"
+                >
+                  Modo Oscuro
+                </p>
+              </li>
+            </ul>
+          </div>
         </div>
       </div>
     </footer>
