actualizacion de la pagina en corro y datos

--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@
             />
             <h2 class="font-medium text-lg dark:text-white">
               Programa personalizado para bajar de peso
+              <span class="text-indigo-600 text-md italic font-semibold"
+                >HABITS.NL</span
+              >
             </h2>
             <p class="text-gray-600 dark:text-gray-300">
               Sus patrones de alimentación estarán ordenados. Tendrá establecido
@@ -227,7 +230,7 @@
         </div>
         <!-- Botton -->
         <form
-          action="https://formsubmit.co/s.sagsilver@gmail.com"
+          action="https://formsubmit.co/arisonacostaendocrinologo.com"
           method="POST"
           class="mt-5 p-8 flex flex-col gap-5 items-center"
         >
@@ -281,11 +284,13 @@
       id="dialog"
       class="hidden fixed z-50 top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 w-96 bg-white rounded-md px-8 py-6 space-y-5 drop-shadow-lg"
     >
-      <h1 class="text-2xl font-semibold">Dialog Title</h1>
+      <h2 class="text-2xl font-semibold">
+        Control de diferentes tipo de diabetes.
+      </h2>
       <div class="py-5 border-t border-b border-gray-300">
         <p>
-          Welcome to KindaCode.com. Hope you will find something useful. Have a
-          nice day and happy coding
+          La Consulta tiene una duración de 45 minutos y un seguimiento continuo
+          por 10 dias.
         </p>
       </div>
       <div class="flex justify-end">
@@ -312,7 +317,21 @@
         >
         <div class="flex gap-4">
           <a
-            href="https://www.facebook.com/arisondavid.acostaandrade"
+            href="https://api.whatsapp.com/send?phone=31616024573"
+            target="_blank"
+            ><img
+              class="w-6 cursor-pointer"
+              src="./img/whatsapp.png"
+              alt="whatsapp"
+          /></a>
+          <a href="https://www.instagram.com/endocrino_acosta/" target="_blank"
+            ><img
+              class="w-6 cursor-pointer"
+              src="./img/instagram.png"
+              alt="instagram"
+          /></a>
+          <a
+            href="https://www.facebook.com/endocrinoarisonacosta"
             target="_blank"
             ><img
               class="w-6 cursor-pointer"
