--- a/index.html
+++ b/index.html
@@ -230,9 +230,10 @@
         </div>
         <!-- Botton -->
         <form
-          action="https://formsubmit.co/arisonacostaendocrinologo.com"
+          action="https://formsubmit.co/arisonacostaendocrinologo@gmail.com"
           method="POST"
           class="mt-5 p-8 flex flex-col gap-5 items-center"
+          target="_blank"
         >
           <input
             name="name"
